--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,15 +1,16 @@
 <h1 align="center">Listing All Categories</h1>
-	<div align="center">
-		<% @categories.each do |category| %>
-			<ul class="listing">
-				<div class="row">
-				<div class="well col-md-4 col-md-offset-4">
-					<li class="category-title">
-						<%= link_to "#{category.name}", category_path(category) %>
-					</li>
-				</div>
-				</div>
-			</ul>
-		<% end %>
-	</div>
+    <div align="center">
+        <% @categories.each do |category| %>
+            <ul class="listing">
+                <div class="row">
+                <div class="well col-md-4 col-md-offset-4">
+                    <li class="category-title">
+                        <%= link_to "#{category.name}", category_path(category) %>
+                    </li>
+                </div>
+                </div>
+            </ul>
+        <% end %>
+    </div>
+    <p align = "center"><%= link_to "Add a category",new_category_path,remote: true, class: "btn btn-primary" %>
 
