--- a/app/views/recurring_expenses/index.html.erb
+++ b/app/views/recurring_expenses/index.html.erb
@@ -28,7 +28,7 @@
 				</table>
 				<br/>
 				</div>
-				<p align = "center"><%= link_to "Add a recurring expense",new_expense_path, class: "btn btn-primary" %>
+				<p align = "center"><%= link_to "Add a recurring expense",new_recurring_expense_path, class: "btn btn-primary" %>
 				</p>
 			</div>
 		</div>
