--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -1,6 +1,6 @@
-<%= render 'shared/errors', obj: @items %>
+<%= render 'shared/errors', obj: @item %>
     <br><br/>
-    <%= form_for(@items, :authenticity_token => true, :html => {class: "form-horizontal", role: "form"}) do |f| %>
+    <%= form_for(@item, :authenticity_token => true, :html => {class: "form-horizontal", role: "form"}) do |f| %>
         <div class="form-group">
             <div align="center"class="control-label col-sm-4">
                 <%= f.label :name %>
