--- a/app/views/expenses/_new_release.html.erb
+++ b/app/views/expenses/_new_release.html.erb
@@ -4,12 +4,12 @@
 
          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
          <h3 id="myModalLabel">Add a category</h3>
-          <div id="error_explanation" style="display:none;">
+          <div id="errors_div">
                 </div>
 
       </div>
         <div class="modal-body">
-         <%= form_for(Category.new, :authenticity_token => true, :html => {class: "form-horizontal", role: "form"}) do |f| %>
+         <%= form_for(Category.new, :authenticity_token => true,remote: true, :html => {class: "form-horizontal", role: "form"}) do |f| %>
               <div class="form-group">
                   <div align="center"class="control-label col-sm-4">
                       <%= f.label :name %>
@@ -20,7 +20,7 @@
               </div>
               <div class="form-group">
                   <div align ="center" class=" col-xs-12">
-                      <%= f.submit class: 'btn btn-primary' %>
+                      <%= f.submit class: 'btn btn-primary', id: 'new-category-submit' %>
                   </div>
               </div>
           <% end %>
@@ -30,3 +30,4 @@
         </div>
   </div>
 </div>
+
