--- a/app/views/expenses/show.html.erb
+++ b/app/views/expenses/show.html.erb
@@ -1,14 +1,14 @@
-<h1 align = "center"><%= @items.name %></h1>
+<h1 align = "center"><%= @item.name %></h1>
     <div class="col-lg-6 col-lg-offset-3">
         <div align = "center" class ="well">
 
-            <h4><strong> Amount spent:</strong> <%= @items.amount %><br/><br/>
-            <h4><strong> Date:</strong> <%= @items.date.to_s(:long) %><br/><br/>
-            <h4><strong> Category:</strong> <%= @items.category.name if @items.category %><br/><br/>
+            <h4><strong> Amount spent:</strong> <%= @item.amount %><br/><br/>
+            <h4><strong> Date:</strong> <%= @item.date.to_s(:long) %><br/><br/>
+            <h4><strong> Category:</strong> <%= @item.category.name if @item.category %><br/><br/>
             <div class="expense-actions">
                 <br/>
-                <%= link_to "Edit", edit_expense_path(@items), class: "btn btn-xs btn-primary" %>
-                <%= link_to "Delete", expense_path(@items), method: :delete, data: { confirm: "Are you sure you want to delete the expense?"}, class: "btn btn-xs btn-danger" %>
+                <%= link_to "Edit", edit_expense_path(@item), class: "btn btn-xs btn-primary" %>
+                <%= link_to "Delete", expense_path(@item), method: :delete, data: { confirm: "Are you sure you want to delete the expense?"}, class: "btn btn-xs btn-danger" %>
                 <%= link_to "Back", expenses_path, class: "btn btn-xs btn-success" %>
             </div>
         </div>
