--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -33,7 +33,6 @@ body
 {
   align-content:  center;
   background-image: asset-url('imh.jpeg');
-  /*background-size: cover;*/
   background-repeat: false;
   width : 60%;
 }
@@ -66,8 +65,8 @@ footer {
   color: #777;
 }
 .expense-actions {
-   border-top: 1px solid #eaeaea;
-   padding-top: 5px;
+  border-top: 1px solid #eaeaea;
+  padding-top: 5px;
 
 }
 
@@ -87,11 +86,11 @@ footer {
 .headingrow,.headdef{
   background-color: #166cb7;
   padding:10px 50px 5px 50px;
-   font-weight: bold;
+  font-weight: bold;
 }
 .exptable
 {
-   font-family: Rockwell Extra Bold,Rockwell Bold, monospace;
+  font-family: Rockwell Extra Bold,Rockwell Bold, monospace;
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
@@ -119,24 +118,21 @@ a
 .exptable tr:nth-child(even){background-color: #f2f2f2;}
 
 .exptable tr:hover {background-color: #ddd;}
-.nav > .navbar-brand > li  {
-    color: black;
-}
 .btn {
-  font-weight: bold;
+    font-weight: bold;
 }
 .datedisplay {
-  background: #81BEF7;
-  margin-top: 5px; 
-  margin-bottom: 5px; 
+    background: #81BEF7;
+    margin-top: 5px; 
+    margin-bottom: 5px; 
 }
 .dropbtn {
-  background-color: #166cb7;
-  color: white;
-  padding: 16px;
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
+    background-color: #166cb7;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
 }
 
 .dropdown {
@@ -145,36 +141,37 @@ a
 }
 
 .dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
 }
 
 .dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
 }
 
 .dropdown-content a:hover {background-color: #f1f1f1}
 
 .dropdown:hover .dropdown-content {
-  display: block;
+    display: block;
 }
 
 .dropdown:hover .dropbtn {
-  background-color: #3e8e41;
+    background-color: #3e8e41;
 }
 .modal-body {
     position: relative;
     max-height: 400px;
     padding: 15px;
 }
-#duration,#Category {
+#duration,#Category, #expense_category_id,#expense_date_1i, #expense_date_2i,#expense_date_3i
+{
     border: 1px solid #166cb7;
     outline-color: #166cb7;
     margin: 5px;
@@ -182,27 +179,40 @@ a
     text-overflow: ellipsis;
     white-space: nowrap;
     background-color: #166cb7;
-  border-color: #166cb7;
-  border-radius: 50px;
-  color: #e5e8e6;
-  font-weight: bold;
-  font-size: 1.5em;
+    border-color: #166cb7;
+    border-radius: 50px;
+    color: #e5e8e6;
+    font-weight: bold;
+    font-size: 1em;
 }
 
 
 .text
 {
-  font-weight: bold;
-  font-size: 1.7em;
+    font-weight: bold;
+    font-size: 1.7em;
 }
 
 .modal-dialog {
-          width: 360px;
+    width: 500px;
         }
  
 .modal-header {
     background-color: #166cb7;
-  padding:16px 16px;
+    padding:16px 16px;
     color:#FFF;
     border-bottom:2px dashed #166cb7;
  }
+ 
+input[type=text] {
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+.isa_error {
+    color: #D8000C;
+    background-color: #FFD2D2;
+}
