--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -17,5 +17,5 @@
     <% end %>
 
     <div align ="center"class="col-xs-12">
-        [ <%= link_to "Back", expenses_path %> ]
+        <%= link_to "Back", expenses_path,class:"btn btn-primary" %> 
     </div>
