--- a/app/views/expenses/_show_expense.html.erb
+++ b/app/views/expenses/_show_expense.html.erb
@@ -3,7 +3,7 @@
         <div class="col-xs-8 col-xs-offset-2">
           <div class ="well well-lg">
               <% if @expense_with_duration.empty? %>
-               <h4>No expenses made</h4>
+               <h4 align="center">No expenses made</h4>
               <% else %>
                           <div class="expenselist">
                           <table align="center" class ="exptable">  
@@ -39,7 +39,7 @@
                           <p align = "center"><%= link_to "Add an expense",new_expense_path, class: "btn btn-primary" %>
                           </p>
                        
-                    <%end%>
+              <%end%>
           </div>
         </div>
         <br/>
