--- a/app/views/expenses/_new_category.html.erb
+++ b/app/views/expenses/_new_category.html.erb
@@ -1,10 +1,13 @@
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <div class="modal-dialog" role="document">
   <div class="modal-content">
       <div class="modal-header">
 
          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
          <h3 id="myModalLabel">Add a category</h3>
+        
           <div id="errors_div"  class="isa_error">
+           
           </div>
 
       </div>
@@ -33,25 +36,27 @@
 
 
 <script>
-
+$("#error_msg").hide();
   $("#create_category_button").on('click', function ()   {
      event.preventDefault();
+
      $.ajax({
        url: '/categories/create',
        type: 'POST',
        data: {
           name: $("#category-name").val()
        },
-
+       
        success: function(data){
          if(data.success){
-           $('#modal-window').modal('hide');  
-           alert("Category created")    
+            $('#modal-window').modal('hide');  
+            alert("Category created")    
          }
          else
          {
-         
-           $("#errors_div").html(data.message).show();  
+            
+            $("#errors_div").html(data.message).show();  
+            $("div > div", "#errors_div").show();
 
          }
 
