--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -34,7 +34,7 @@
       </div>
     <% end %>
     <div align = "center">
-      [ <%= link_to "Cancel request and back", expenses_path %> ]
+       <%= link_to "Cancel", expenses_path ,class: 'btn btn-primary' %> 
     </div>
   </div>
 </div>
