--- a/app/views/expenses/_expense.html.erb
+++ b/app/views/expenses/_expense.html.erb
@@ -28,7 +28,7 @@
       <div class="col-xs-8 col-xs-offset-2">
         <div class ="well well-lg">
           <% if obj.empty? %>
-              <h4>No expenses made today</h4>
+              <h4 align = "center">No expenses made today</h4>
           <% else %> 
               <div class="expenselist">
                 <table align="center" class ="exptable">  
