--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,5 @@
 <h1 align = "center"> Edit Your Account</h1>
 <%= render 'form'%>
+<div align = "center">
+       <%= link_to "Cancel", expenses_path ,class: 'btn btn-primary' %> 
+    </div>
