--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,6 @@
 
 <h1 align="center"> Signup for Expense Tracker </h1>
 <%= render 'form'%>
+<div align = "center">
+       <%= link_to "Cancel", root_path ,class: 'btn btn-primary' %> 
+    </div>
