--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,7 +1,7 @@
 <h1 align="center">Listing All Categories</h1>
     <div align="center">
         <% if @categories.empty? %>
-          <h4>Haven't created a category</h4>
+          <h4>Haven't created a category yet :)</h4>
         <% else %>
 
                 <% @categories.each do |category| %>
